<resources>
    <string name="app_name">Business Card Creator</string>

    <!-- Titles -->
    <string name="label_business_cards">Cartão de Visita</string>
    <string name="label_new_card">Novo Cartão</string>
    <string name="label_color_picker">Selecione uma cor</string>
    <string name="label_share">Compartilhar</string>

    <!-- Hints -->
    <string name="hint_name">Nome</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_company">Empresa</string>
    <string name="hint_color">Selecione a cor de fundo</string>

    <!-- Texts -->
    <string name="text_exemple">EXEMPLO</string>
    <string name="show_success">"Cartão cadastrado com sucesso!"</string>

    <!-- Buttons -->
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_pick_color">Selecionar</string>

    <!-- AlertDialog -->
    <string name="delete_title_singular">Excluir cartão?</string>
    <string name="delete_message_singular">Deseja realmente excluir o cartão selecionado?</string>
    <string name="delete_title_plural">Excluir cartões?</string>
    <string name="delete_message_plural">Deseja realmente excluir os cartões selecionados?</string>
    <string name="selected_items_toolbar_singular">1 Cartão Selecionado</string>
    <string name="selected_items_toolbar_plural">cartões selecionados</string>

    <plurals name="selected_items_toolbar">
        <item quantity="one">%d cartão selecionado</item>
        <item quantity="other">%d cartões selecionados</item>
    </plurals>

</resources>