<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    android:elevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title_color_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alertdialog_title"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/iv_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            app:layout_constraintBottom_toTopOf="@id/sb_red"
            app:layout_constraintTop_toTopOf="@id/tv_title_color_picker"
            tools:background="@color/purple_200"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_exemple"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_background"
            app:layout_constraintTop_toTopOf="@id/iv_background" />

        <SeekBar
            android:id="@+id/sb_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:max="255"
            android:progress="126"
            android:progressTint="@android:color/holo_red_dark"
            android:thumbTint="@android:color/holo_red_dark"
            app:layout_constraintTop_toBottomOf="@id/iv_background" />

        <SeekBar
            android:id="@+id/sb_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:max="255"
            android:progress="126"
            android:progressTint="@android:color/holo_green_dark"
            android:thumbTint="@android:color/holo_green_dark"
            app:layout_constraintTop_toBottomOf="@id/sb_red" />

        <SeekBar
            android:id="@+id/sb_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:max="255"
            android:progress="126"
            android:progressTint="@android:color/holo_blue_dark"
            android:thumbTint="@android:color/holo_blue_dark"
            app:layout_constraintTop_toBottomOf="@id/sb_green" />

        <EditText
            android:id="@+id/edt_color"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/hint_color"
            android:inputType="textCapWords"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/sb_blue" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_pick_color"
            app:layout_constraintTop_toBottomOf="@id/edt_color"
            android:text="@string/btn_cancel"
            android:textSize="12sp"
            />

        <Button
            android:id="@+id/btn_pick_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintStart_toEndOf="@id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_color"
            android:text="@string/btn_pick_color"
            android:textSize="12sp"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>